--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
     "php": "^8.2",
     "laravel/framework": "^11.0|^12.0",
     "aws/aws-sdk-php": "^3.339",
-    "prism-php/prism": ">=0.88.0"
+    "prism-php/prism": ">=0.99.7"
   },
   "config": {
     "allow-plugins": {
@@ -39,7 +39,7 @@
     "pestphp/pest-plugin-laravel": "^3.0",
     "phpstan/extension-installer": "^1.3",
     "phpstan/phpstan-deprecation-rules": "^2.0",
-    "rector/rector": "^2.1",
+    "rector/rector": "2.2.14",
     "projektgopher/whisky": "^0.7.0",
     "orchestra/testbench": "^9.4",
     "mockery/mockery": "^1.6",
